--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,242 @@
     </section>
     <!-- Daily Best Sells End -->
 
+    <section class="mt-5 mb-5">
 
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="mb-5">
+                        <img src="https://freshcart.codescandy.com/assets/images/icons/clock.svg" alt="">
+                    </div>
+                    <h3 class="h5 mb-3">10 minute grocery now</h3>
+                    <p>Get your order delivered to your doorstep at the earliest from FreshCart pickup stores near you.
+                    </p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="mb-5">
+                        <img src="https://freshcart.codescandy.com/assets/images/icons/clock.svg" alt="">
+                    </div>
+                    <h3 class="h5 mb-3">10 minute grocery now</h3>
+                    <p>Get your order delivered to your doorstep at the earliest from FreshCart pickup stores near you.
+                    </p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="mb-5">
+                        <img src="https://freshcart.codescandy.com/assets/images/icons/clock.svg" alt="">
+                    </div>
+                    <h3 class="h5 mb-3">10 minute grocery now</h3>
+                    <p>Get your order delivered to your doorstep at the earliest from FreshCart pickup stores near you.
+                    </p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="mb-5">
+                        <img src="https://freshcart.codescandy.com/assets/images/icons/clock.svg" alt="">
+                    </div>
+                    <h3 class="h5 mb-3">10 minute grocery now</h3>
+                    <p>Get your order delivered to your doorstep at the earliest from FreshCart pickup stores near you.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="bg-light pt-5 pb-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <h6 class="mb-4">Catefgories</h6>
+                    <div class="row">
+                        <div class="col-6">
+                            <ul class="nav flex-column">
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                            </ul>
+                        </div>
+                        <div class="col-6">
+                            <ul class="nav flex-column">
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                <li class="nav-item mb-2">Vegetables & Fruits</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-8">
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-3">
+                            <h6 class="mb-4">Catefgories</h6>
+                            <div class="row">
+                                <div class="col-12">
+                                    <ul class="nav flex-column">
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-6 col-md-3">
+                            <h6 class="mb-4">Catefgories</h6>
+                            <div class="row">
+                                <div class="col-12">
+                                    <ul class="nav flex-column">
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-6 col-md-3">
+                            <h6 class="mb-4">Catefgories</h6>
+                            <div class="row">
+                                <div class="col-12">
+                                    <ul class="nav flex-column">
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-6 col-md-3">
+                            <h6 class="mb-4">Catefgories</h6>
+                            <div class="row">
+                                <div class="col-12">
+                                    <ul class="nav flex-column">
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                        <li class="nav-item mb-2">Vegetables & Fruits</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="border-top pt-3 ">
+                <div class="row align-items-center">
+                    <div class="col-lg-5 text-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item text-dark">
+                                Payment Partners
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#">
+                                    <img src="https://freshcart.codescandy.com/assets/images/payment/amazonpay.svg"
+                                        alt="">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#">
+                                    <img src="https://freshcart.codescandy.com/assets/images/payment/amazonpay.svg"
+                                        alt="">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#">
+                                    <img src="https://freshcart.codescandy.com/assets/images/payment/amazonpay.svg"
+                                        alt="">
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#">
+                                    <img src="https://freshcart.codescandy.com/assets/images/payment/amazonpay.svg"
+                                        alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-7">
+                        <ul class="list-inline mb-0 text-lg-end text-center">
+                            <li class="list-inline-item mb-2 mb-md-0 text-dark">Get deliveries with FreshCart</li>
+                            <li class="list-inline-item ms-4">
+                                <a href="#">
+                                    <img src="https://freshcart.codescandy.com/assets/images/appbutton/appstore-btn.svg"
+                                        alt="" style="width:140px">
+                                </a>
+                            </li>
+                            <li class="list-inline-item ms-4">
+                                <a href="#">
+                                    <img src="https://freshcart.codescandy.com/assets/images/appbutton/appstore-btn.svg"
+                                        alt="" style="width:140px">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container mb-5">
+            <div class="border-top py-4">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <span class="small text-muted">
+                            Copyright 2023 © FreshCart eCommerce HTML Template. All rights reserved. Powered by
+                            Codescandy.
+                        </span>
+                    </div>
+                    <div class="col-md-6">
+                        <ul class="list-inline text-md-end mb-0 small mt-3 mt-md-0">
+                            <li class="list-inline-item text-muted">Follow us on</li>
+                            <li class="list-inline-item me-1">
+                                <a href="" class="icon-shape icon-sm social-links">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-facebook" viewBox="0 0 16 16">
+                                        <path
+                                            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-inline-item me-1">
+                                <a href="" class="icon-shape icon-sm social-links">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-facebook" viewBox="0 0 16 16">
+                                        <path
+                                            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
