--- a/index.html
+++ b/index.html
@@ -53,14 +53,13 @@
     <!-- First NavBar -->
     <nav class="navbar navbar-expand-lg pb-2 pt-2">
         <div class="container">
-
-
+            <!-- logo -->
             <a href="#" class="navbar-brand">
                 <img src="https://freshcart.codescandy.com/assets/images/logo/freshcart-logo.svg" alt="">
             </a>
-            <ul class="list-group list-group-horizontal d-md-none">
-                <li class="list-group-item">
-
+            <!-- small screen nav components -->
+            <ul class="list-group list-group-horizontal d-lg-none d-md-flex">
+                <li class="list-group-item border-0">
                     <a href="">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-heart" viewBox="0 0 16 16">
@@ -70,7 +69,7 @@
                     </a>
 
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item border-0">
                     <a href="">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-bag-check" viewBox="0 0 16 16">
@@ -81,10 +80,115 @@
                         </svg>
                     </a>
                 </li>
+                <li>
+                    <!-- toggle -->
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#offcavans-navbar" aria-controls="offcavans-navbar" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </li>
             </ul>
 
 
-            <form action="#" class="search-header">
+            <!-- Offcanvas Navbar -->
+
+            <div class="offcanvas offcanvas-start p-4 p-lg-0 show" tabindex="-1" id="offcavans-navbar">
+                <div class="d-flex justify-content-between align-items-center mb-2 d-lg-none">
+                    <div>
+                        <img src="https://freshcart.codescandy.com/assets/images/logo/freshcart-logo.svg" alt="">
+                    </div>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="d-block d-lg-none mb-2 pt-2">
+                    <button class="btn btn-success">All Departments</button>
+                </div>
+                <div class="d-block d-lg-none">
+                    <ul class="navbar-nav text-dark">
+                        <li class="text-dark nav-item dropdown list-group-item px-4 d-flex">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+                                aria-expanded="false">Home
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown list-group-item px-4">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+                                aria-expanded="false">Shop
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown list-group-item px-4">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+                                aria-expanded="false">Stores
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown list-group-item px-4">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+                                aria-expanded="false">Mega Menu
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown list-group-item px-4">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+                                aria-expanded="false">Account
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item list-group-item px-4">
+                            <a class="nav-link" href="#">Docs</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <!-- Search Form -->
+            <form action="#" class="search-header d-md-none d-lg-flex">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search for products..">
                     <span class="input-group-text">
@@ -97,7 +201,9 @@
                 </div>
             </form>
 
-            <button class="btn btn-light btn-outline-secondary">
+            <!-- Location Button -->
+
+            <button class="btn btn-light btn-outline-secondary d-md-none d-lg-flex">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt"
                     viewBox="0 0 16 16">
                     <path
@@ -106,8 +212,8 @@
                 </svg>
                 <span>Location</span>
             </button>
-
-            <ul class="list-group list-group-horizontal">
+            <!-- icon group -->
+            <ul class="list-group list-group-horizontal d-md-none d-lg-flex">
                 <li class="list-group-item">
                     <a href="">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -142,9 +248,8 @@
         </div>
 
     </nav>
-
     <!--  The second navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-default pt-2 pb-3 border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light pt-2 pb-3 border-bottom">
         <div class="container px-0 px-md-3" id="second-nav">
             <div class="d-none d-lg-block">
                 <button class="btn btn-success">All Departments</button>
@@ -234,40 +339,38 @@
 
     <!-- Carousel -->
     <section class="mt-3 mb-5">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div id="banner-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="https://freshcart.codescandy.com/assets/images/slider/slide-1.jpg" class="d-block w-100"
                         alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <span class="badge text-bg-warning">Opening Sale Discount 50%</span>
-                        <h2 class="text-dark display-6 fw-bold mt-4">SuperMarket Daily Fresh Grocery</h2>
-                        <p class="lead">Introduced a new model for online grocery shopping
+                        <h2 class="text-dark display-6 fw-bold mt-1 mt-lg-3">SuperMarket Daily Fresh Grocery</h2>
+                        <p class="lead d-none d-md-block">Introduced a new model for online grocery shopping
                             and convenient home delivery. </p>
 
-                        <a href="#" class="btn btn-dark mt-3">Shop Now</a>
+                        <a href="#" class="btn btn-dark mt-1 mt-lg-3">Shop Now</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="https://freshcart.codescandy.com/assets/images/slider/slider-2.jpg" class="d-block w-100"
                         alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption  d-md-block">
                         <span class="badge text-bg-warning">Opening Sale Discount 50%</span>
-                        <h2 class="text-dark display-6 fw-bold mt-4">SuperMarket Daily Fresh Grocery</h2>
-                        <p class="lead">Introduced a new model for online grocery shopping
+                        <h2 class="text-dark display-6 fw-bold mt-1 mt-lg-3">SuperMarket Daily Fresh Grocery</h2>
+                        <p class="lead  d-none d-md-block">Introduced a new model for online grocery shopping
                             and convenient home delivery. </p>
 
-                        <a href="#" class="btn btn-dark mt-3">Shop Now</a>
+                        <a href="#" class="btn btn-dark mt-1 mt-lg-3">Shop Now</a>
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#banner-carousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#banner-carousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
